--- a/header.html
+++ b/header.html
@@ -27,13 +27,16 @@
                             <a href="#home" class="nav-link">home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#features" class="nav-link">features</a>
+                            <a href="#features" class="nav-link">reviews</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#product" class="nav-link">product</a>
+                            <a href="#product" class="nav-link">size guide</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#reviews" class="nav-link">reviews</a>
+                            <a href="#reviews" class="nav-link">gift cards</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#reviews" class="nav-link" id="shop-cart"><i class="fas fa-shopping-cart" title="cart"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -45,21 +48,21 @@
                             Login
                         </button>
                         <button type="button">
-                            Order Now
+                            Sign up
                         </button>
                     </div>
                     <ul class="nav-icons">
                         <span class="center">
-                            <i class= "fab fa-instagram"></i>
+                            <i class="fab fa-cc-visa" title="visa"></i>
                         </span>
                         <span class="center">
-                            <i class= "fab fa-twitter"></i>
+                            <i class="fab fa-cc-mastercard" title="mastercard"></i>
                         </span>
                         <span class="center">
-                            <i class= "fab fa-facebook"></i>
+                            <i class="fab fa-cc-paypal" title="paypal"></i>
                         </span>
                         <span class="center">
-                            <i class= "fab fa-whatsapp"></i>
+                            <i class="fab fa-cc-diners-club" title="diners club"></i>
                         </span>
                     </ul>
                 </div>
@@ -71,6 +74,34 @@
             <!--end navbar-->
         </header>
         <!--end header-->
+
+        <!--footer-->
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-wrapper">
+                    <div>
+                        <ul class="footer-links">
+                            <li><a href="#">contact</a></li>
+                            <li><a href="#">terms and conditions</a></li>
+                            <li><a href="#">shopping & returns</a></li>
+                            <li><a href="#">faq</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <ul class="footer-links">
+                            <li><a href="#"><i class="fab fa-instagram"></i>instagram</a></li>
+                            <li><a href="#"><i class="fab fa-whatsapp"></i>whatsapp +5491169420696</a></li>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i>facebook</a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="footer-text">
+                    <p class="text">&copy; 2022 by lobinjeje. Ebongmerce Studio Work</p>
+                </div>
+            </div>
+        </footer>
 
         <!--js-->
         <script src="js/script.js"></script>
