--- a/header.html
+++ b/header.html
@@ -7,11 +7,9 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/f363b53072.js"></script>
     </head>
-    <body>
-
-
         <!--header-->
         <header class="header" id="home">
             <!--navbar-->
@@ -75,35 +73,7 @@
         </header>
         <!--end header-->
 
-        <!--footer-->
-        <footer class="footer">
-            <div class="container">
-                <div class="footer-wrapper">
-                    <div>
-                        <ul class="footer-links">
-                            <li><a href="#">contact</a></li>
-                            <li><a href="#">terms and conditions</a></li>
-                            <li><a href="#">shopping & returns</a></li>
-                            <li><a href="#">faq</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <ul class="footer-links">
-                            <li><a href="#"><i class="fab fa-instagram"></i>instagram</a></li>
-                            <li><a href="#"><i class="fab fa-whatsapp"></i>whatsapp +5491169420696</a></li>
-                            <li><a href="#"><i class="fab fa-facebook-f"></i>facebook</a></li>
-                            <li><a href="#"></a></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="footer-text">
-                    <p class="text">&copy; 2022 by lobinjeje. Ebongmerce Studio Work</p>
-                </div>
-            </div>
-        </footer>
-
         <!--js-->
         <script src="js/script.js"></script>
-    </body>
+
 </html>
